<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/headerBackground"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/menuHeaderAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/gymnast_logo"
        android:contentDescription="@string/contentDescAvatar" />

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/headerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/textColorHeader"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/headerRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role"
        android:textColor="@color/textColorHeader"
        android:textSize="20sp" />


</LinearLayout>